Try with -Xmx2048m -Xms1024m -XX:MaxPermSize (2)