@@ -1,1 +1,2 @@
 Spring MVC Experiment ...just for my experiment
+Try with -Xmx2048m -Xms1024m -XX:MaxPermSize (2)
